# Mindfulness

./: .gitignore  CMakeLists.txt  Mindfulness_VSCode_Workspace.code-workspace
docs/: WORKING_NOTES.md  documentation-strategy.md
docs/adr/: 007-critical-design-discoveries.md  adr-documentation-strategy.md
docs/api/: api-documentation-strategy.md  public-interfaces.md
docs/api/services/: ProcessEventDispatcher-API.md  ProcessMonitor-API.md
docs/architecture/: architecture-documentation-strategy.md  component-overview.md  core-architecture-and-data-flow.md  data-flow-and-ssot.md  sequence-diagrams.md
docs/archive-working-notes/: 11-4-25-WORKING_NOTES.md  11-5-25-WORKING_NOTES.md  11-6-25-WORKING_NOTES.md
docs/changelog/: v1.0.1-DDD-Overhaul
docs/data/: data-documentation-strategy.md
docs/design/: design-documentation-strategy.md
docs/implementation/: build-setup.md  implementation-documentation-strategy.md
resources/: resources.qrc
src/: main.cpp
src/app/: AppController.cpp  AppController.h
src/core/: AppController.cpp  AppController.h  GameList.cpp  GameList.h  GameSession.cpp  GameSessionManager.cpp  GameSessionManager.h
src/domain/: Application.cpp  Application.h  GameSession.cpp  GameSession.h
src/managers/: CategorizationManager.cpp  CategorizationManager.h
src/monitoring/: ProcessMonitor.cpp  ProcessMonitor.h  ProcessUtils.h
src/repositories/: ApplicationRepository.cpp  ApplicationRepository.h
src/services/application/: ProcessEventDispatcher.cpp  ProcessEventDispatcher.h
src/services/infrastructure/: ProcessMonitor.cpp  ProcessMonitor.h
src/services/logging/: EventLogger.cpp  EventLogger.h
src/services/utils/: ProcessUtils.cpp
src/ui/: CategorizeDialog.cpp  CategorizeDialog.h  ConfigWindow.cpp  ConfigWindow.h  TimeSetDialog.cpp  TimeSetDialog.h  WarningDialog.cpp  WarningDialog.h
tests/: CMakeLists.txt
tests/unit/: test_ApplicationRepository.cpp  test_GameList.cpp  test_GameSession.cpp  test_ProcessMonitor.cpp
